Responsive Font Size + Fixed Horizontal Scrolling

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -12,23 +12,20 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Oswald', sans-serif;
 }
 
-h1 {
-  font-size: 5rem;
-}
-h2 {
-  font-size: 3.5rem;
-}
-h3 {
-  font-size: 2.5rem;
-}
-h4 {
-  font-size: 2rem;
-}
-h5 {
-  font-size: 1.5rem;
-}
-h6 {
-  font-size: 1rem;
+h1 { font-size: 5rem; }
+h2 { font-size: 3.5rem; }
+h3 { font-size: 2.5rem; }
+h4 { font-size: 2rem; }
+h5 { font-size: 1.5rem; }
+h6 { font-size: 1rem; }
+
+@media screen and (max-width: 767px) {
+  h1 { font-size: 3.5rem; }
+  h2 { font-size: 2.5rem; }
+  h3 { font-size: 1.75rem; }
+  h4 { font-size: 1.5rem; }
+  h5 { font-size: 1.25rem; }
+  h6 { font-size: 1rem; }
 }
 
 a {
