--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 .hero {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   margin-top: -75px;
   object-fit: cover;
 }
